Удалил лишние комменты